@@ -388,9 +388,11 @@ class CPSCalendarTool(UniqueObject, PortalFolder):
         brains = ZCatalog.searchResults(self.portal_catalog,
                  meta_type='Calendar')
         if brains:
+            # This is an unrestricted version of catalogbrains getObject():
             calendars = [brain.aq_parent.unrestrictedTraverse(brain.getPath())
                          for brain in brains]
-            return [each for each in calendars if each] # Filter any empty entries.
+            # Filter any empty entries.
+            return [each for each in calendars if each] 
         else:
             return []
 
